Endret rekkefølge innsending #deploy-test-dolly-backend (#3382)